# snow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  MANIFEST.in  README.md  config.py  environment.yml  imager.py  main.py  main_ALMA.py  main_VLAconfigs.py  pyproject.toml  requirements.txt  selfcal.py  selfcal_utils.py  setup.cfg  setup.py
.github/workflows/: build.yaml  build_base_container.yaml  build_latest_container.yaml  publishpypi.yaml  testpypi.yaml
analysis_scripts/: AntPosResult.py  CompareAntPosResults.py  O2SounderPlayer.py  README  WvrCorrection.py  XmlObjectifier.py  XmlObjectifier_python3.py  almahelpers_localcopy.py  almaqa2csg.py  au_noASDMLibrary.py  calDatabaseQuery.py  checksource.py  compUtils.py  fileIOPython.py  mpfit.py  plotbandpass3.py  readscans.py  tmUtils.py  tsysNormalize.py
main_files/: main.py  main_ALMA.py  main_VLA.py  main_VLAconfigs.py  main_eMERLIN.py
selfcalframework/: Cube2Im.py  Gausssmooth.py  Resamp.py  Resamp.py~  _version.py  exec_mask_resamp.bash  exec_mask_resamp.bash~  exec_pyra_restore.bash  exec_pyra_restore.bash~  image_utils.py  imager.py  mask_resamp.py  mask_resamp.py~  pyra_dirty_maps.py  pyrarestore.py  pyrarestore.py~  selfcal.py  selfcal_msbackups.py  selfcal_utils.py
selfcalframework/imaging/: __init__.py  clean.py  gpuvmem.py  imager.py  tclean.py  wsclean.py
selfcalframework/selfcalibration/: ampcal.py  apcal.py  phasecal.py  selfcal.py
selfcalframework/utils/: image_utils.py  selfcal_utils.py
src/selfcalframework/: _version.py
src/selfcalframework/imaging/: gpuvmem.py  imager.py  tclean.py  wsclean.py
src/selfcalframework/selfcalibration/: ampcal.py  apcal.py  phasecal.py  selfcal.py
src/selfcalframework/utils/: image_utils.py  selfcal_utils.py
src/snow/imaging/: __init__.py  gpuvmem.py  imager.py  tclean.py  wsclean.py
src/snow/selfcalibration/: __init__.py  ampcal.py  apcal.py  phasecal.py  selfcal.py
src/snow/utils/: __init__.py  image_utils.py  selfcal_utils.py
