[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=70.0.0", "setuptools-scm", "wheel"]

[project]
authors = [
  {name = "Miguel Cárcamo", email = "miguel.carcamo@usach.cl"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

description = "A Python object oriented framework to do radio-interferometric self-calibration"
dynamic = ["version", "dependencies"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Miguel Cárcamo", email = "miguel.carcamo@usach.cl"}
]
name = "snow"
readme = "README.md"
requires-python = ">=3.10, <3.11"

[project.urls]
Source = "https://github.com/miguelcarcamov/snow"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
include = ["snow*"]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/snow/_version.py"
